--- a/finalProject_member/Member/managersIndex.html
+++ b/finalProject_member/Member/managersIndex.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wepet 寵物資訊平台</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- ...existing code... -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- ...existing code... -->
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="chatroom.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -121,9 +124,16 @@
             <button class="btn btn-material">
               <span class="material-icons">shopping_cart</span>
             </button>
-            <button class="btn btn-material">
-              <span class="material-icons">account_circle</span>
-            </button>
+            <div class="dropdown d-inline">
+              <button class="btn btn-material dropdown-toggle" type="button" id="accountDropdown"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="material-icons">account_circle</span>
+              </button>
+              <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdown">
+                <li><a class="dropdown-item" href="#">修改資料</a></li>
+                <li><a class="dropdown-item" href="#">登出</a></li>
+              </ul>
+            </div>
 
           </div>
         </div>
@@ -132,8 +142,8 @@
   </nav>
 
   <!-- 主要內容 -->
-  <div class="container mt-5 pt-5" >
-   <h1 class="page-title" style="justify-content: center;">後臺管理系統</h1>
+  <div class="container mt-5 pt-5">
+    <h1 class="page-title" style="justify-content: center;">後臺管理系統</h1>
   </div>
 
 
