--- a/finalProject_member/Member/mamberLogin.html
+++ b/finalProject_member/Member/mamberLogin.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <script src="./memFunction.js"></script>
+
 </head>
 
 
@@ -18,22 +20,7 @@
 
 <body>
 
-    <script>
-        function showForm(formId) {
-            // 所有表單 ID
-            const formIds = ['loginForm', 'registerForm', 'forgotPasswordForm'];
-
-            formIds.forEach(id => {
-                document.getElementById(id).style.display = (id === formId) ? 'block' : 'none';
-            });
-        }
-
-        // 預設顯示 loginForm（如果沒有用 style 設定，也可以在這裡控制）
-        window.onload = () => showForm('loginForm');
-    </script>
-
-
-    <!-- Navbar -->
+       <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container-fluid">
             <!-- LOGO -->
